# fenics-plotly

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AUTHORS.html  CONTRIBUTING.html  CONTRIBUTING.md  DEMO.html  HISTORY.md  INSTALL.html  LICENSE  Makefile  README.html  README.md  authors.html  contributing.html  demo.html  fenics_plotly.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  unit_cube.html  unit_square.html
.circleci/: config.yml
.github/workflows/: github-pages.yml  main.yml
_modules/: index.html
_modules/fenics_plotly/: fenics_plotly.html
_sources/: CONTRIBUTING.md  DEMO.md  INSTALL.md  authors.rst.txt  contributing.rst.txt  history.rst.txt  index.rst.txt  modules.rst.txt  readme.rst.txt  unit_square.ipynb
demo/: unit_cube.ipynb  unit_square.ipynb
docs/: Makefile  _config.yml  _toc.yml  conf.py  contributing.rst  demo.rst  fenics_plotly.rst  index.rst  installation.rst  make.bat  readme.rst  usage.rst
fenics_plotly/: __init__.py  fenics_plotly.py
tests/: __init__.py  test_fenics_plotly.py
