[metadata]
name = fenics_plotly
description = A package for plotting FEniCS objects using plotly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/fenics-plotly
author = Henrik Finsberg
author_email = henriknf@simula.no
version = 2021.0.0
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = finite element, mechanics, cardiac, heart

[options]
packages = find:
install_requires =
    plotly
    numpy
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests
    demos

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    mypy
    pre-commit
docs =
    Sphinx
    jupyter-book
    myst-parser
    pandoc
	nbsphinx
test =
    black
    flake8
    jupytext
    mypy
    pytest
    pytest-cov

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=fenics_plotly -v --cov-report term-missing --cov-report xml
testpaths =
    tests


[mypy]
files = fenics_plotly,tests
ignore_missing_imports = true
